[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nano-tools"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "pyyaml",
    "typer",
    "rich",
    "anthropic>=0.25",
]

[project.optional-dependencies]
openai   = ["openai>=1.0"]
search   = ["httpx>=0.27"]
docs     = ["pypdf>=3.0"]
all      = ["openai>=1.0", "httpx>=0.27", "pypdf>=3.0"]
dev      = ["pytest", "ruff"]

[project.scripts]
nano-tools = "nano_tools.cli:app"
